--- a/NamingIdentifiers/TaskOneClass123/TaskOneClass123.csproj
+++ b/NamingIdentifiers/TaskOneClass123/TaskOneClass123.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>2e60536a-9884-4bc2-9fd4-ee0aca3217f1</ProjectGuid>
+    <ProjectGuid>{3D601605-3430-4121-A258-D1AA5A3935E7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TaskOneClass123</RootNamespace>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Startup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
