--- a/NamingIdentifiers/TaskTwoRenaming/TaskTwoRenaming.csproj
+++ b/NamingIdentifiers/TaskTwoRenaming/TaskTwoRenaming.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>e7cdc7e1-1812-4744-8609-275a42715741</ProjectGuid>
+    <ProjectGuid>{A7265554-C16A-4E9E-81B9-E8D372E8A202}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TaskTwoRenaming</RootNamespace>
@@ -41,7 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Enumerations\GenderType.cs" />
+    <Compile Include="People.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
