--- a/NamingIdentifiers/Task1,2,4/TaskFourReFactorAndImproveTheCode/Task4.Minesweeper.csproj
+++ b/NamingIdentifiers/Task1,2,4/TaskFourReFactorAndImproveTheCode/Task4.Minesweeper.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3D601605-3430-4121-A258-D1AA5A3935E7}</ProjectGuid>
+    <ProjectGuid>{98665F1D-4604-4C4E-A707-9DFD104F32AD}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TaskOneClass123</RootNamespace>
-    <AssemblyName>TaskOneClass123</AssemblyName>
+    <RootNamespace>TaskFourReFactorAndImproveTheCode</RootNamespace>
+    <AssemblyName>TaskFourReFactorAndImproveTheCode</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Startup.cs" />
+    <Compile Include="StartupMinesweeper.cs" />
+    <Compile Include="Models\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
