--- a/NamingIdentifiers/Task1,2,4/TaskOneClass123/Task1.VariableConversion.csproj
+++ b/NamingIdentifiers/Task1,2,4/TaskOneClass123/Task1.VariableConversion.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A7265554-C16A-4E9E-81B9-E8D372E8A202}</ProjectGuid>
+    <ProjectGuid>{3D601605-3430-4121-A258-D1AA5A3935E7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TaskTwoRenaming</RootNamespace>
-    <AssemblyName>TaskTwoRenaming</AssemblyName>
+    <RootNamespace>TaskOneClass123</RootNamespace>
+    <AssemblyName>TaskOneClass123</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,8 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enumerations\GenderType.cs" />
-    <Compile Include="People.cs" />
+    <Compile Include="Conversion.cs" />
+    <Compile Include="Startup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
