--- a/NamingIdentifiers/Task1,2,4/TaskTwoRenaming/Task2.People.csproj
+++ b/NamingIdentifiers/Task1,2,4/TaskTwoRenaming/Task2.People.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{98665F1D-4604-4C4E-A707-9DFD104F32AD}</ProjectGuid>
+    <ProjectGuid>{A7265554-C16A-4E9E-81B9-E8D372E8A202}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TaskFourReFactorAndImproveTheCode</RootNamespace>
-    <AssemblyName>TaskFourReFactorAndImproveTheCode</AssemblyName>
+    <RootNamespace>TaskTwoRenaming</RootNamespace>
+    <AssemblyName>TaskTwoRenaming</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,12 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Enumerations\GenderType.cs" />
+    <Compile Include="Human.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
