--- a/ControlFlowConditionalStatementsLoops/Task1.ClassChef/Task1.ClassChef.csproj
+++ b/ControlFlowConditionalStatementsLoops/Task1.ClassChef/Task1.ClassChef.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Task1.ClassChef</RootNamespace>
     <AssemblyName>Task1.ClassChef</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -50,7 +51,6 @@
     <Compile Include="Models\Potato.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Models\Vegetable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
