--- a/HighQualityClasses/Abstraction/Abstraction.csproj
+++ b/HighQualityClasses/Abstraction/Abstraction.csproj
@@ -35,10 +35,11 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Circle.cs" />
-    <Compile Include="Figure.cs" />
-    <Compile Include="FiguresExample.cs" />
-    <Compile Include="Rectangle.cs" />
+    <Compile Include="Models\Circle.cs" />
+    <Compile Include="Contracts\IFigure.cs" />
+    <Compile Include="Models\Figure.cs" />
+    <Compile Include="Startup.cs" />
+    <Compile Include="Models\Rectangle.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
