--- a/HighQualityClasses/Inheritance-and-Polymorphism/Inheritance-and-Polymorphism.csproj
+++ b/HighQualityClasses/Inheritance-and-Polymorphism/Inheritance-and-Polymorphism.csproj
@@ -41,12 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="OffsiteCourse.cs" />
-    <Compile Include="LocalCourse.cs" />
-    <Compile Include="CoursesExamples.cs" />
+    <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Properties\" />
+    <Compile Include="Models\Course.cs" />
+    <Compile Include="Contracts\ICourse.cs" />
+    <Compile Include="Startup.cs" />
+    <Compile Include="Models\LocalCourse.cs" />
+    <Compile Include="Models\OffsiteCourse.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
